Add PWA initialization option in CLI
Let's,
* Add a flag in CLI init command for PWA functionality
* Add variables in Configs to indicate PWA requirements
* Update page templates to include PWA injection code
* Add basic assets required for PWAs

--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -30,6 +30,7 @@
     {%- endfor %}
     {%- endif %}
     {%- if faviconUrl -%} <link rel="icon" href="{{ faviconUrl }}"> {%- endif -%}
+    {%- if pwa -%} <link rel="manifest" href="/manifest.json"> {%- endif -%}
 </head>
 <script>
   const baseUrl = '{{ baseUrl }}'
@@ -62,4 +63,11 @@
     {{ scripts }}
 {%- endfor %}
 {%- endif %}
+{%- if pwa -%}
+<script>
+if ('serviceWorker' in navigator) {
+   navigator.serviceWorker.register("/sw.js");
+}
+</script>
+{%- endif -%}
 </html>
