Add pagefind beta

--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -19,6 +19,7 @@
     {% if asset.bootstrapIcons %} <link rel="stylesheet" href="{{ asset.bootstrapIcons }}"> {%- endif -%}
     <link rel="stylesheet" href="{{ asset.highlight }}">
     {%- if not dev -%}<link rel="stylesheet" href="{{ asset.markBindCss }}">{%- endif -%}
+    {% if asset.pagefindCss %} <link rel="stylesheet" href="{{ asset.pagefindCss }}"> {%- endif -%}
     {%- if asset.pluginLinks -%}
     {%- for link in asset.pluginLinks -%}
         {{ link }}
@@ -56,6 +57,12 @@
 {%- for script in asset.pluginScripts %}
     {{ script }}
 {%- endfor %}
+{%- endif %}
+{%- if asset.pagefindJs %}
+    <script src="{{ asset.pagefindJs }}"></script>
+{%- endif %}
+{%- if asset.pagefindScript %}
+    {{ asset.pagefindScript }}
 {%- endif %}
 {%- if asset.scriptBottom %}
 {%- for scripts in asset.scriptBottom %}
