--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -34,7 +34,7 @@
 <script>
   const baseUrl = '{{ baseUrl }}'
 </script>
-<body {% if hasPageNavHeadings %} data-bs-spy="scroll" data-bs-target="#mb-page-nav" data-bs-offset="100" {% endif %}>
+<body {% if hasPageNavHeadings %} data-bs-spy="scroll" data-bs-target="#mb-page-nav" data-bs-offset="100" {% endif %} data-code-theme="{{ codeTheme }}">
 {{ content }}
 </body>
 {{- pageUserScriptsAndStyles -}}
